--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -24,7 +26,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "ethers": "^5.7.1",
+    "next-themes": "^0.2.1",
     "prettier": "^2.7.1",
-    "typescript": "4.8.4"
+    "react-promise-tracker": "^2.1.0",
+    "typescript": "4.8.4",
+    "wagmi": "^0.7.3"
   }
 }
