--- a/contract/package.json
+++ b/contract/package.json
@@ -2,10 +2,14 @@
   "name": "nft-account",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "arbitrum_goerli": "yarn hardhat run --network arbitrum_goerli scripts/deploy.ts"
+  },
   "repository": "https://github.com/adachi-440/nft-account.git",
   "author": "adachi_440 <tomoki1999314@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
@@ -22,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mocha": "^10.1.0",
@@ -31,7 +36,7 @@
     "harhat": "^1.0.1",
     "prettier": "^2.7.1",
     "solidity-coverage": "^0.8.0",
-    "ts-node": ">=8.0.0",
+    "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
   }
