--- a/contract/package.json
+++ b/contract/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "arbitrum_goerli": "yarn hardhat run --network arbitrum_goerli scripts/deploy.ts"
+    "arbitrum_goerli_item": "yarn hardhat run --network arbitrum_goerli scripts/deploy.ts",
+    "arbitrum_goerli_account": "yarn hardhat run --network arbitrum_goerli scripts/deployAccount.ts"
   },
   "repository": "https://github.com/adachi-440/nft-account.git",
   "author": "adachi_440 <tomoki1999314@gmail.com>",
