--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.2.1",
     "prettier": "^2.7.1",
     "react-promise-tracker": "^2.1.0",
+    "react-toastify": "^9.0.8",
     "typescript": "4.8.4",
     "wagmi": "^0.7.3"
   }
